--- a/src/Legal & Trust/Security.css
+++ b/src/Legal & Trust/Security.css
@@ -1565,7 +1565,7 @@
     display: block;
     position: static;
     width: 100%;
-    max-width: 296.94px;
+    max-width: 100%;
     height: auto;
     order: 5;
     margin: 24px 0 0;
